[gd_scene load_steps=5 format=3 uid="uid://buyhnxcjvumc3"]

[ext_resource type="Script" path="res://Screens/MainMenu.gd" id="1_wmh3p"]
[ext_resource type="Texture2D" uid="uid://bgsjpopgks0j7" path="res://assets/interface/User Interface 03/Menu Buttons/Menu Buttons 1.png" id="2_lmlsj"]
[ext_resource type="Texture2D" uid="uid://c1n4eyjfgboq4" path="res://assets/interface/User Interface 03/Menu Buttons/Menu Buttons 11.png" id="3_sgs2f"]
[ext_resource type="Texture2D" uid="uid://qsd4rmmyushm" path="res://assets/interface/User Interface 03/Menu Buttons/Menu Buttons 13.png" id="4_qb4kl"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -2.0
offset_right = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wmh3p")

[node name="Host" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -121.0
offset_right = 1.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.50847, 2.51241)
texture_normal = ExtResource("2_lmlsj")

[node name="Join" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 50.0
offset_top = 113.0
offset_right = 135.0
offset_bottom = 158.0
text = "Join
"

[node name="Settings" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 665.0
offset_top = 394.0
offset_right = 750.0
offset_bottom = 439.0
scale = Vector2(2.52764, 2.49127)
texture_normal = ExtResource("3_sgs2f")

[node name="HeroSelect" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 56.0
offset_top = 401.0
offset_right = 141.0
offset_bottom = 446.0
text = "Hero
"

[node name="Exit" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 664.0
offset_top = 460.0
offset_right = 749.0
offset_bottom = 505.0
scale = Vector2(2.56, 2.48729)
texture_normal = ExtResource("4_qb4kl")

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HeroSelect" to="." method="_on_hero_select_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
